...
                                    Padding(
                                      padding: EdgeInsetsDirectional.fromSTEB(
                                          0.0, 0.0, 0.0, 10.0),
                                      child: Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey('Signup-email_45vb'),
                                          controller:
                                              _model.signupEmailTextController,
                                          focusNode:
                                              _model.signupEmailFocusNode,
                                          onChanged: (_) =>
                                              EasyDebounce.debounce(
...
                                    Padding(
                                      padding: EdgeInsetsDirectional.fromSTEB(
                                          0.0, 0.0, 0.0, 10.0),
                                      child: Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey('signup-password_6tej'),
                                          controller: _model
                                              .signupPasswordTextController,
                                          focusNode:
                                              _model.signupPasswordFocusNode,
                                          autofocus: false,
                                          textInputAction: TextInputAction.next,
...
                                      ),
                                    ),
                                    Container(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: ValueKey(
                                            'signup-ConfirmPassword_n0vc'),
                                        controller: _model
                                            .signupConfirmPasswordTextController,
                                        focusNode: _model
                                            .signupConfirmPasswordFocusNode,
                                        autofocus: false,
                                        textInputAction: TextInputAction.done,
...
                                    Padding(
                                      padding: EdgeInsetsDirectional.fromSTEB(
                                          0.0, 0.0, 0.0, 10.0),
                                      child: Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey('login-email_ox5n'),
                                          controller:
                                              _model.loginEmailTextController,
                                          focusNode: _model.loginEmailFocusNode,
                                          onChanged: (_) =>
                                              EasyDebounce.debounce(
                                            '_model.loginEmailTextController',
...
                                        ),
                                      ),
                                    ),
                                    Container(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: ValueKey('login-password_zt07'),
                                        controller:
                                            _model.loginPasswordTextController,
                                        focusNode:
                                            _model.loginPasswordFocusNode,
                                        autofocus: false,
                                        textInputAction: TextInputAction.done,
...
                      ),
                    ),
                    Stack(
                      children: [
                        if (_model.tabBarCurrentIndex == 0)
                          FFButtonWidget(
                            key: ValueKey('signup-button_ru3g'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'LOGIN_PAGE_signup-button_ON_TAP');
                              logFirebaseEvent('signup-button_auth');
                              GoRouter.of(context).prepareAuthEvent();
                              if (_model.signupPasswordTextController.text !=
...
                              ),
                              borderRadius: BorderRadius.circular(8.0),
                            ),
                          ),
                        if (_model.tabBarCurrentIndex == 1)
                          FFButtonWidget(
                            key: ValueKey('Button_login_49i6'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'LOGIN_PAGE_Button_login_ON_TAP');
                              logFirebaseEvent('Button_login_auth');
                              GoRouter.of(context).prepareAuthEvent();

...
