...
                                  ),
                            ),
                          ),
                          Align(
                            alignment: AlignmentDirectional(-1.0, 0.0),
                            child: FFButtonWidget(
                              key: ValueKey('soon_button_ljgp'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'DISCOVER_LAYOUT1_PAGE_soon_button_ON_TAP');
                                logFirebaseEvent('soon_button_navigate_to');

                                context.pushNamed(CartWidget.routeName);
...
                              ),
                            ),
                          ),
                          Align(
                            alignment: AlignmentDirectional(-1.0, 0.0),
                            child: FFButtonWidget(
                              key: ValueKey('learnButton_rer7'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'DISCOVER_LAYOUT1_PAGE_learnButton_ON_TAP');
                                logFirebaseEvent('learnButton_navigate_to');

                                context.pushNamed(ProductPageWidget.routeName);
...
